--- a/Etap1/WPF/WPF.csproj
+++ b/Etap1/WPF/WPF.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2BF78AB2-FB72-48AF-8774-F049AEF60564}</ProjectGuid>
+    <ProjectGuid>{1ECBC0A8-7EE3-49F5-9453-1F6F095391E4}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>Wpf</RootNamespace>
-    <AssemblyName>Wpf</AssemblyName>
+    <RootNamespace>WPF</RootNamespace>
+    <AssemblyName>WPF</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -55,7 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="TreeV\MainWindow.xaml">
+    <Compile Include="TreeViewModel.cs" />
+    <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -63,12 +64,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="TreeV\DelegateCommand.cs" />
-    <Compile Include="TreeV\MainWindow.xaml.cs">
+    <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
-    <Compile Include="TreeV\TreeViewItem.cs" />
-    <Compile Include="TreeV\TreeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -98,7 +97,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Library\Library.csproj">
-      <Project>{4aa4a3f7-16e0-4deb-a742-66dec2387b79}</Project>
+      <Project>{3beb4c89-677b-4cf6-8c86-73431d6921de}</Project>
       <Name>Library</Name>
     </ProjectReference>
   </ItemGroup>
