--- a/TPAProject/UnitTests/UnitTests.csproj
+++ b/TPAProject/UnitTests/UnitTests.csproj
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Compile Include="ReflectionUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MVVMUnitTests.cs" />
+    <Compile Include="UnitTest1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
