--- a/TPAProject/WPF/WPF.csproj
+++ b/TPAProject/WPF/WPF.csproj
@@ -101,6 +101,10 @@
       <Project>{3beb4c89-677b-4cf6-8c86-73431d6921de}</Project>
       <Name>Library</Name>
     </ProjectReference>
+    <ProjectReference Include="..\XMLSerializer\XMLSerializer.csproj">
+      <Project>{d0ec89f7-b40a-4c2f-9901-7922f8807623}</Project>
+      <Name>XMLSerializer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
