--- a/TPAProject/XMLSerializer/XMLSerializer.csproj
+++ b/TPAProject/XMLSerializer/XMLSerializer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3BEB4C89-677B-4CF6-8C86-73431D6921DE}</ProjectGuid>
+    <ProjectGuid>{D0EC89F7-B40A-4C2F-9901-7922F8807623}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Library</RootNamespace>
-    <AssemblyName>Library</AssemblyName>
+    <RootNamespace>XMLSerializer</RootNamespace>
+    <AssemblyName>XMLSerializer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -42,34 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IOpenDialogPath.cs" />
-    <Compile Include="MVVM\RelayCommand.cs" />
-    <Compile Include="MVVM\ViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reflection\AssemblyMetadata.cs" />
-    <Compile Include="Reflection\Enums.cs" />
-    <Compile Include="Reflection\ExtensionMethodsMetadata.cs" />
-    <Compile Include="Reflection\MethodMetadata.cs" />
-    <Compile Include="Reflection\NamespaceMetadata.cs" />
-    <Compile Include="Reflection\ParameterMetadata.cs" />
-    <Compile Include="Reflection\PropertyMetadata.cs" />
-    <Compile Include="Reflection\TypeMetadata.cs" />
-    <Compile Include="Serialization\ISerializer.cs" />
-    <Compile Include="Singleton\TypeSingleton.cs" />
-    <Compile Include="Tracing\FileLogger.cs" />
-    <Compile Include="Tracing\ILogger.cs" />
-    <Compile Include="Tracing\LevelEnum.cs" />
-    <Compile Include="TreeView\DelegateCommand.cs" />
-    <Compile Include="TreeView\ReflectionTreeItems\AssemblyTI.cs" />
-    <Compile Include="TreeView\ReflectionTreeItems\ItemTypeEnum.cs" />
-    <Compile Include="TreeView\ReflectionTreeItems\MethodTI.cs" />
-    <Compile Include="TreeView\ReflectionTreeItems\NamespaceTI.cs" />
-    <Compile Include="TreeView\ReflectionTreeItems\ParameterTI.cs" />
-    <Compile Include="TreeView\ReflectionTreeItems\PropertyTI.cs" />
-    <Compile Include="TreeView\ReflectionTreeItems\TypeTI.cs" />
-    <Compile Include="TreeView\TreeViewItem.cs" />
-    <Compile Include="TreeView\TreeViewModel.cs" />
+    <Compile Include="XMLSerializer.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Library\Library.csproj">
+      <Project>{3beb4c89-677b-4cf6-8c86-73431d6921de}</Project>
+      <Name>Library</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
