--- a/TPAProject/UnitTests/UnitTests.csproj
+++ b/TPAProject/UnitTests/UnitTests.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ReflectionUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MVVMUnitTest.cs" />
+    <Compile Include="SerializationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -60,6 +61,10 @@
     <ProjectReference Include="..\Library\Library.csproj">
       <Project>{3BEB4C89-677B-4CF6-8C86-73431D6921DE}</Project>
       <Name>Library</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\XMLSerializer\XMLSerializer.csproj">
+      <Project>{d0ec89f7-b40a-4c2f-9901-7922f8807623}</Project>
+      <Name>XMLSerializer</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
