--- a/TPAProject/WPF/WPF.csproj
+++ b/TPAProject/WPF/WPF.csproj
@@ -97,13 +97,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Contracts\Contracts.csproj">
+      <Project>{76265163-5445-4C56-B650-8A9EBD325376}</Project>
+      <Name>Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Library\Library.csproj">
       <Project>{3beb4c89-677b-4cf6-8c86-73431d6921de}</Project>
       <Name>Library</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\XMLSerializer\XMLSerializer.csproj">
-      <Project>{d0ec89f7-b40a-4c2f-9901-7922f8807623}</Project>
-      <Name>XMLSerializer</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
