--- a/TPAProject/Console/App.config
+++ b/TPAProject/Console/App.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <section name="plugins" type="System.Configuration.AppSettingsSection"/>
+  </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <plugins>
+    <add key="../../../XMLSerializer/bin/Debug"/>
+    <add key="../../../FileLogger/bin/Debug"/>
+  </plugins>
 </configuration>
