--- a/TPAProject/Data/Data.csproj
+++ b/TPAProject/Data/Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D0EC89F7-B40A-4C2F-9901-7922F8807623}</ProjectGuid>
+    <ProjectGuid>{32BE8F62-4A3C-417C-8767-081752EDB2C6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XMLSerializer</RootNamespace>
-    <AssemblyName>XMLSerializer</AssemblyName>
+    <RootNamespace>Data</RootNamespace>
+    <AssemblyName>Data</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,25 +32,26 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseAssembly.cs" />
+    <Compile Include="BaseMethod.cs" />
+    <Compile Include="BaseNamespace.cs" />
+    <Compile Include="BaseParameter.cs" />
+    <Compile Include="BaseProperty.cs" />
+    <Compile Include="BaseType.cs" />
+    <Compile Include="Enums.cs" />
+    <Compile Include="MethodModifiers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XMLSerializer.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Contracts\Contracts.csproj">
-      <Project>{76265163-5445-4c56-b650-8a9ebd325376}</Project>
-      <Name>Contracts</Name>
-    </ProjectReference>
+    <Compile Include="TypeModifiers.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
