--- a/TPAProject/UnitTests/UnitTests.csproj
+++ b/TPAProject/UnitTests/UnitTests.csproj
@@ -62,6 +62,10 @@
       <Project>{76265163-5445-4C56-B650-8A9EBD325376}</Project>
       <Name>Contracts</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{32BE8F62-4A3C-417C-8767-081752EDB2C6}</Project>
+      <Name>Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\FileLogger\FileLogger.csproj">
       <Project>{3efab43f-87fa-4d0a-8772-d63c5d593123}</Project>
       <Name>FileLogger</Name>
