Działająca poprawiona serializacja

--- a/TPAProject/Contracts/Contracts.csproj
+++ b/TPAProject/Contracts/Contracts.csproj
@@ -57,5 +57,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{32be8f62-4a3c-417c-8767-081752edb2c6}</Project>
+      <Name>Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
