--- a/TPAProject/WPF/App.config
+++ b/TPAProject/WPF/App.config
@@ -9,7 +9,7 @@
   </startup>
   <plugins>
     <add key="../../../XMLSerializer/bin/Debug" />
-    <add key="../../../FileLogger/bin/Debug" />
+    <add key="../../../DatabaseLogger/bin/Debug" />
   </plugins>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
