--- a/TPAProject/DatabaseLogger/DatabaseLogger.csproj
+++ b/TPAProject/DatabaseLogger/DatabaseLogger.csproj
@@ -49,7 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseLogs.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="LoggerContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
