zaczęta serializacja do bazy danych

--- a/TPAProject/DatabaseData/DatabaseData.csproj
+++ b/TPAProject/DatabaseData/DatabaseData.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DatabaseContext.cs" />
+    <Compile Include="DatabaseSerializer.cs" />
     <Compile Include="Model\DatabaseAssembly.cs" />
     <Compile Include="Model\DatabaseMethod.cs" />
     <Compile Include="Model\DatabaseNamespace.cs" />
@@ -76,6 +77,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Contracts\Contracts.csproj">
+      <Project>{76265163-5445-4c56-b650-8a9ebd325376}</Project>
+      <Name>Contracts</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Data\Data.csproj">
       <Project>{32BE8F62-4A3C-417C-8767-081752EDB2C6}</Project>
       <Name>Data</Name>
