--- a/TPAProject/WPF/App.config
+++ b/TPAProject/WPF/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <plugins>
-    <add key="../../../XMLSerializer/bin/Debug" />
+    <add key="../../../DatabaseData/bin/Debug" />
     <add key="../../../DatabaseLogger/bin/Debug" />
   </plugins>
   <entityFramework>
