--- a/TPAProject/WPF/App.config
+++ b/TPAProject/WPF/App.config
@@ -7,6 +7,12 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
+  <connectionStrings>
+    <add name="TPALoggerContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=D:\RepozytoriumGITHUB\Technologie-programowania-adaptacyjnego\TPAProject\DatabaseLogger\TPALoggerDB.mdf;
+        integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="TPADatabaseContext" connectionString="data source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=D:\RepozytoriumGITHUB\Technologie-programowania-adaptacyjnego\TPAProject\DatabaseData\TPASerializationDB.mdf;
+        integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <plugins>
     <!--<add key="../../../XMLSerializer/bin/Debug" />-->
     <add key="../../../DatabaseData/bin/Debug" />
