--- a/TPAProject/Console/App.config
+++ b/TPAProject/Console/App.config
@@ -9,9 +9,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <plugins>
-    <!--<add key="../../../XMLSerializer/bin/Debug" />-->
-    <add key="../../../DatabaseData/bin/Debug" />
-    <!--<add key="../../../FileLogger/bin/Debug" />-->
+    <add key="../../../XMLSerializer/bin/Debug" />
     <add key="../../../DatabaseLogger/bin/Debug" />
   </plugins>
   <entityFramework>
